# Pehraz_Demo

./: .gitignore  download_species.py  plant_diseases.json  plantnet_diseases.json  plantnet_diseases_extractor.py  pyproject.toml
backend/: .env.example
backend/api/: Diagnostic.py  api.py  constants.py  schemas.py  services.py
backend/config/: settings.py  urls.py
frontend/: app.py
